# hermes

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  docker-release.yml  helm-release.yml
config/templates/: discord-compact.j2  discord-default.j2  slack-compact.j2  slack-default.j2  slack-grouped.j2
docs/: README.md  alertmanager-integration.md  architecture.md  troubleshooting.md
docs/concepts/: deduplication.md  routing-and-groups.md  state-management.md  templating.md
docs/examples/: grouped-alerts-config.yaml  multi-team-config.yaml  simple-config.yaml
docs/tutorials/: advanced-routing.md  basic-alert-routing.md  getting-started.md  group-alerts.md  multiple-destinations.md
k8s/chart/: Chart.yaml  values.yaml
k8s/chart/templates/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml  servicemonitor.yaml
k8s/kustomize/base/: configmap.yaml  deployment.yaml  kustomization.yaml  secret.yaml  service.yaml  servicemonitor.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/redis/: single-instance.yaml
src/: config.py  fingerprint.py  main.py  matcher.py  metrics.py  models.py  state.py  templates.py  webhooks.py
src/middleware/: __init__.py  logging.py  tracing.py
src/persistence/: __init__.py  circuit_breaker.py  redis_manager.py  sqlite_manager.py
src/senders/: __init__.py  base.py  base_sender.py  discord.py  factory.py  slack.py  stdout.py
tests/: test_config.py  test_core.py
